loader alignment issue fixed

--- a/src/App.scss
+++ b/src/App.scss
@@ -15,3 +15,7 @@
   font-weight: normal;
   font-style: normal;
 }
+
+.App {
+  position: relative;
+}
